# kosher

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PROJECT_PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
features/examples/: login.feature
kosher/: __init__.py
kosher/parser/: __init__.py  exceptions.py  gherkin.py  models.py
poc/: __main__.py  llm.py  mcp_client.py  server.py  steps.py  test_page.html
tests/: conftest.py
tests/parser/: test_edge_cases.py  test_gherkin.py
