[project]
name = "kosher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama>=0.4",
    "mcp>=1.0",
    "gherkin-official>=38.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-async>=0.1.1",
    "ruff>=0.15.0",
    "ty>=0.0.16",
]
